3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Correctly clear god information.
 common/holy.c
Nicolas Weeger 2007-04-14

Remove unused godlink::pantheon field.
 common/holy.c
 include/god.h
Nicolas Weeger 2007-04-14

Remove unused (and obsolete) current_weapon_script field.
Remove now unused find_best_weapon_used_match().
 common/loader.l object.c
 crossedit/Attr.c
 include/libproto.h object.h
 server/apply.c skill_util.c
 test/unit/common/check_arch.c check_object.c
Nicolas Weeger 2007-04-14

Replace plugin light change with call to map_change_light() for coherence checking.
Remove obsolete properties.
 include/sproto.h
 plugins/cfpython/cfpython_map.c
 plugins/cfpython/include/cfpython_map_private.h
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 server/plugins.c
Nicolas Weeger 2007-04-14

server/monster.c: make monsters use the same 'say' format than players.
Nicolas Weeger 2007-04-12

Remove '_speak' hook and related functions. '_say' exists, and is the same.
 plugins/cfanim/cfanim.c
 plugins/cfpython/cfpython_object.c
 plugins/cfpython/include/cfpython_object_private.h
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 server/plugins.c
Nicolas Weeger 2007-04-12

Plugin API changes. More void* conversion removing.
 plugins/cfanim/cfanim.c
 plugins/cflogger/cflogger.c
 plugins/cfnewspaper/cfnewspaper.c
 plugins/cfpython/cfpython.c
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 plugins/template/plugin_template.c
 server/plugins.c
Nicolas Weeger 2007-04-12

server/init.c: add -conf documentation to help.
Nicolas Weeger 2007-04-12
