@@ -15,6 +15,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Remove obsolete command_build function.
+ include/sproto.h
+ server/c_object.c commands.c
+Nicolas Weeger 2007-04-14
+
 Correctly clear god information.
  common/holy.c
 Nicolas Weeger 2007-04-14
